assets/style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}


/* START HEADER */


header{
    background-color: rgba(0,132,253,255);
    display: flex;
    justify-content: center;
}

.header-container{
    width: 70%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1em;
    color: white;
}



ul{
    list-style: none;
    display: flex;
    align-items: center;
    gap: 1em;
}

.nav-item{
    text-decoration: none;
    color: white;
}

.logo{
    font-size: 2em;
}

#get-started{
    color: black;
    text-decoration: none;
    border-radius: 30px;
    padding: .4em;
    background-color: white;
}

.hidden{
    display: none;
}

@media screen and (max-width: 810px) {

    .header-container{
        width: 100%;
    }

    .logo{
        font-size: 2.5em;
    }


   ul{
    display: none;
   }

   .hidden{
    display: inline;
    font-size: 1.5em;
   }
    
}

/* END HEADER */

/* START PROPERTIES SECTION */

.properties{
    margin-top: 50px;
}



.properties-container{
    width: 70%;
    margin: auto;
    display: flex;
    flex-wrap: wrap;
    gap: 1em;
    padding: 1em;
}

.property-big{
    background-color: rgba(181,221,255,255);
    width: calc(66.6666% - 1em);
    display: flex;
    padding: 1em;
    border-radius: 30px;
    position: relative;
}

.big-col{
    width: 50%;
}

.big-col h2{
    margin-bottom: .3em;
    margin-top: 1em;
    color:rgba(0,132,253,255)
}

.big-col p{
    margin-bottom: 1.5em;
    margin-top: 1.5em;
    color: rgba(93,113,131,255);
    line-height: 1.5em;
}

.app-store{
    background-color: rgba(0,132,253,255);
    padding: .5em;
    border-radius: 30px;
    text-decoration: none;
    color: white;
    font-size: 1em;
    text-align: center;
    letter-spacing: .2em;
}

.phone-img{
    max-width: 50%;
    margin-bottom: -16px;
}

.property-big .big-col i{
    font-size: 1em;
    color: white;
}


.property{
    padding: 1em;
    max-width: calc(33.3333% - 1em);
    background-color: rgba(181,221,255,255);
    display: flex;
    flex-direction: column;
    text-align: center;
    border-radius: 30px;
}

.properties-container i{
    font-size: 3.5em;
    margin-bottom: .5em;
    color:rgba(0,132,253,255)
}

.property h2{
    font-size: 1.2em;
    margin-bottom: 1em;
    color:rgba(0,132,253,255)
}

.property p{
    margin-bottom: 1em;
    color: rgba(93,113,131,255);
    line-height: 1.5em;
}


@media screen and (max-width:810px) {
    .property-big{
        flex-direction: column;
    }

    .big-col{
        width: 100%;
    }

    .phone-img{
        margin-top: 1em;
    }
}


@media screen and (max-width:375px) {
    .properties-container{
        flex-direction: column;
    }

    .property-big{
        width: 100%;
    }

    .phone-img{
        max-width: 100%
    }

    .property{
        max-width: 100%;
    }
}

/* END PROPERTIES SECTION TO DO RESPONSIVE */


/* PLANNING SECTION */


.planning-section{
    background-color: rgba(151,146,228,255);
    padding: 1em;
    margin-top: 4em;
}

.planning-container{
    padding-top: 4em;
    width: 60%;
    height: 100%;
    margin: auto;
    background-color: rgba(151,146,228,255);
    display: flex;
    gap: 2em;
}

.col-left{
    width: 50%;
    color: white;
}

.col-left h2{
    margin-top: 2em;
    margin-bottom: 1em;
}

.col-left p{
    margin-top: 4em;
    margin-bottom: 4em;
    line-height: 1.5em;
}


.image-container{
    width: 100%;
}

.col-right{
    margin-top: 2em;
    width: 50%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    background-color: white;
    border-radius: 30px;
}

.col-right h2{
    margin-top: 1em;
    margin-bottom: 1em;
}

.col-right p{
    padding-inline: 1em;
    line-height: 1.5em;
}


.col-right span{
    display: flex;
    align-items: center;
    justify-content: center;
    margin: auto;
    width: 40px;
    height: 40px;
    margin-top: 1em;
    background-color: rgba(151,146,228,255);
    border-radius: 50%;
}


.planning-1{
    max-width: 60%;
}
.planning-2{
    max-width: 50%;
}

@media screen and (max-width:810px) {
    .planning-container{
        flex-direction: column;
    }

    .col-right{
        width: 100%;
    }

    .col-left{
        width: 100%;
    }

    .planning-1{
        max-width: 100%;
    }

    .planning-2{
        max-width: 100%;
    }

    .col-right span{
        margin-bottom: 1em;
    }
    
}

/* END PLANNING SECTION */

/* START PARTNERS SECTION */

.testimonials-section{
    margin-top: 4em;
}



.partners-container{
    width: 60%;
    margin: auto;
    text-align: center;
}

.partners-container h2{
    margin-top: 1em;
    margin-bottom: 1em;
}

.partners-container p{
    margin-bottom: 2em;
}



.partner-1{
    width: 100%;
    background-color: rgba(151,146,228,255);
    border-radius: 30px;
    display: flex;
    text-align: left;
    align-items: center;
    margin-bottom: 1em;
}

.partner-img{
    width: 30%;
    padding: 1em;
    overflow: hidden;
    flex: 0 0 auto;
}

.testimonial{
    max-width: 100%;
    aspect-ratio: 1/1;
    object-fit: cover;
    border-radius: 50%;
}

.testimonial-description{
    padding: 2em;
}

.slogan{
    margin-top: 2em;
    margin-bottom: 2em;
    color: white;
}

.testimonial-name{
    color: white;
    font-size: 1.5em;
}

@media screen and (max-width:375px) {
    .partner-1{
        flex-direction: column;
        text-align: center;
    }

    .partner-img{
        margin-top: 1em;
        width: 100%;
    }
    
    .slogan{
        margin-top: .2em;
    }
}

/* END PARTNERS SECTION */

/* START BENEFITS/CARDS SECTION */

.benefits{
    margin-top: 2em;
    background-color: rgba(151,146,228,255);
    text-align: center;
}

.benefits h2{
    padding-top: 1em;
    color: white;
    font-size: 2.5em;
}

.cards-container{
    width: 60%;
    background-color: rgba(151,146,228,255);
    margin: auto;
    padding-top: 2em;
    padding-bottom: 2em;
    display: flex;
    flex-wrap: wrap;
    flex-shrink: 0;
    gap: 1em;
    text-align: left;
}

.card{
    width: calc(100% / 3 - 1em);
    background-color: white;
    padding: 1em;
    border-radius: 30px;
}

.card h1{
    color: rgba(151,146,228,255);
    font-size: 4em;
}

.card h2{
    color: rgba(151,146,228,255);
    margin-bottom: 1em;
    font-size: 1.5em;
}

.card p{
    color: rgba(151,146,228,255);
    margin-bottom: 3em;
    line-height: 1.5em;
}

.card a{
    text-decoration: none;
    color: white;
    padding: .5em;
    border-radius: 30px;
    background-color: rgba(151,146,228,255);
    padding-inline: 2em;
    letter-spacing: .2em;
}

@media screen and (max-width:810px) {
    .card{
        width: calc(100% / 2 - 1em);
    }
    
}

@media screen and (max-width:375px) {
    .card{
        width: 100%;
    }
    
}

/* END BENEFITS SECTION */

/* START ABOUT US SECTION */

.about-us{
    margin-top: 4em;
}



.about-us-container{
    width: 60%;
    margin: auto;
    display: flex;
    margin-bottom: 4em;
    padding: 1em;
}

.description-about-us{
    width: 60%;
}

.description-about-us h1{
    font-size: 3em;
    color: rgba(151,146,228,255);
}

.description-about-us p{
    padding-top: 2em;
    padding-bottom: 1em;
    line-height: 2em;
}

.ceo{
    width: 40%;
    padding-left: 1em;
}

.ceo-img-container{
    width: 80%;
    aspect-ratio: 1/1;
}

.ceo-img{
    max-width: 100%;
    border-radius: 50%;
}

.ceo-slogan{
    font-size: 1.5em;
    color: rgba(151,146,228,255);
    padding-bottom: 2em;
    padding-top: 1em;
}

.find-me{
    background-color: rgba(151,146,228,255);
    padding: .8em;
    text-decoration: none;
    color: white;
    border-radius: 30px;
    white-space: nowrap;
}


@media screen and (max-width:810px) {
    .ceo-slogan{
        font-size: 1.5em;
    }
}

@media screen and (max-width:375px) {
    .about-us-container{
        flex-direction: column;
        width: 100%;
    }

    .description-about-us{
        width: 100%;
    }

    .ceo{
        width: 100%;
    }
}

/* END ABOUT US SECTION */

/* START FREE SECTION */

.free{
    background-color: rgba(151,146,228,255);
}


.free-container{
    padding-top: 3em;
    padding-bottom: 3em;
    width: 30%;
    margin: auto;
    text-align: center;
}

.free-container>*{
    padding-top: .3em;
    padding-bottom: .3em;
}

.free-container h3{
    color: darkgrey;
    font-size: 1.5em;
}

.free-container h2{
    color: white;
    font-size: 2em;
}

.free-container h1{
    font-size: 7em;
    color: rgba(253,193,95,255);
}

.free-container p{
    color: white;
    padding-bottom: 2em;
}

#get-started-2{
    color: rgba(151,146,228,255);
    text-decoration: none;
    border-radius: 30px;
    padding: .5em 1.5em;
    background-color: white;
    font-size: 1.5em;
}

.copyright{
    padding-top: 2em;
    color: white;
}

.copyright a{
    color: white;
}

@media screen and (max-width:810px) {
    .free-container{
        width: 70%;
    }
}

@media screen and (max-width:375px) {
    .free-container h3{
        font-size: 1em;
    }

    .free-container h2{
        font-size: 1.2em;
    }

    .free-container h1{
        font-size: 3.5em;
    }

    #get-started-2{
        font-size: 1em;
    }

    .copyright{
        font-size: .8em;
    }
}

/* END FREE US SECTION */


footer{
    background-color: rgba(51,51,51,255);
    color: white;
}


.footer-container{
    width: 50%;
    margin: auto;
    text-align: center;
}

.footer-container>*{
    padding-top: 4em;
    padding-bottom: 2em;
}

.footer-container a{
    color: rgba(151,146,228,255);
}

@media screen and (max-width: 810px) {
    .footer-container{
        width: 70%;
        font-size: .8em;
    }
}

@media screen and (max-width:375px) {
    .footer-container{
        font-size: .6em;
    }
}

